// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenshotView render matches snapshot when deviceName is unavailable 1`] = `
<div>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <ScreenshotContainer
    highlightBoxRectangles={Array []}
    screenshotData={
      Object {
        "base64PngData": "test-base-64-png-data",
      }
    }
  />
</div>
`;

exports[`ScreenshotView render matches snapshot when passed a screenshot with no highlights 1`] = `
<div>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <ScreenshotContainer
    highlightBoxRectangles={Array []}
    screenshotData={
      Object {
        "base64PngData": "test-base-64-png-data",
      }
    }
  />
  <caption>
    My Cool Android Device
  </caption>
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData {} 1`] = `
<div>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <ScreenshotContainer
    highlightBoxRectangles={Array []}
    screenshotData={Object {}}
  />
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData null 1`] = `
<div>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <ScreenshotContainer
    highlightBoxRectangles={Array []}
    screenshotData={null}
  />
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData undefined 1`] = `
<div>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <ScreenshotContainer
    highlightBoxRectangles={Array []}
  />
</div>
`;
